<resources>
    <string name="app_name_key">ACME_SUPERMARKET</string>
    <string name="current_uuid">ACME_CURRENT_USER_UUID</string>
    <string name="app_name">Acme Supermarket Customer App</string>
    <string name="register">Registration</string>
    <string name="name">Name</string>
    <string name="enter_name">Enter your name...</string>
    <string name="enter_username">Enter a username...</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter a password...</string>
    <string name="payment_info">Payment Info</string>
    <string name="card_number">Card Number</string>
    <string name="enter_card_number">Enter your card number...</string>
    <string name="enter_card_holder">Enter the card holder...</string>
    <string name="card_holder">Card Holder</string>
    <string name="card_expiration_date">Expiration Date</string>
    <string name="enter_card_expiration_month">MM</string>
    <string name="enter_card_expiration_year">YY</string>
    <string name="cvv">CVV</string>
    <string name="finish_registration">Finish</string>
    <string name="forward_slash">/</string>
    <string name="have_an_account">Already have an account? Login instead!</string>
    <string name="login">Login</string>
    <string name="dont_have_account">Don\'t have an account? Register instead!</string>
    <string name="your_shopping_cart">Current Cart Value: </string>
    <string name="customer_name">Customer Name</string>
    <string name="shopping_value">--.-- €</string>
    <string name="current_payment_option">Current Payment Option</string>
    <string name="confirm_purchase">Confirm Purchase</string>
    <string name="coupon">Voucher</string>
    <string name="confirm_your_purchase">Confirm Your Purchase</string>
    <string name="discount">Do you wish to discount your current store credit to this purchase?</string>
    <string name="go_back">Go Back</string>
    <string name="current_shopping_order">Current Shopping Order</string>
    <string name="subtotal">Subtotal:</string>
    <string name="total">Total:</string>
    <string name="discount_value">Discount Value:</string>
    <string name="past_transactions">Past Transactions</string>
    <string name="used_coupon">Voucher Used</string>
    <string name="applied_discount">Discounted Amount</string>
    <string name="loyalty_coupon">A loyalty coupon will be granted on checkout! Use it on your next purchase to store 15% of the purchase\'s value in store credit!</string>
    <string name="acme_text">ACME SUPERMARKET</string>
    <string name="new_purchase">New Purchase</string>
    <string name="default_price">--.-- €</string>
    <string name="negative_default_price">- --.-- €</string>
    <string name="Date">Date</string>
    <string name="example_card_number">0000000000000000</string>
</resources>
