<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="25dp"
    android:layout_marginRight="25dp"
    android:orientation="vertical"
    tools:context=".activities.MainActivity">

    <TextView
        android:id="@+id/registration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:fontFamily="@font/open_sans_bold"
        android:gravity="center_horizontal"
        android:text="@string/register"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="35sp" />

    <LinearLayout
        android:id="@+id/name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/name"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:fontFamily="@font/open_sans_semibold"
            android:text="@string/name"
            android:textAlignment="viewStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <EditText
            android:id="@+id/input_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:ems="10"
            android:fontFamily="@font/open_sans"
            android:hint="@string/enter_name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/username_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/username"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:fontFamily="@font/open_sans_semibold"
            android:text="@string/username"
            android:textAlignment="viewStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <EditText
            android:id="@+id/input_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:ems="10"
            android:fontFamily="@font/open_sans"
            android:hint="@string/enter_username"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/password_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/password"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:fontFamily="@font/open_sans_semibold"
            android:text="@string/password"
            android:textAlignment="viewStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <EditText
            android:id="@+id/input_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:ems="10"
            android:fontFamily="@font/open_sans"
            android:hint="@string/enter_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    </LinearLayout>

    <TextView
        android:id="@+id/payment_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/payment_info"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="22sp" />

    <LinearLayout
        android:id="@+id/card_number_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/card_number"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:fontFamily="@font/open_sans_semibold"
            android:text="@string/card_number"
            android:textAlignment="viewStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <EditText
            android:id="@+id/input_card_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:ems="10"
            android:fontFamily="@font/open_sans"
            android:hint="@string/enter_card_number"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="16"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/card_holder_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/card_holder"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:fontFamily="@font/open_sans_semibold"
            android:text="@string/card_holder"
            android:textAlignment="viewStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <EditText
            android:id="@+id/input_card_holder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:ems="10"
            android:fontFamily="@font/open_sans"
            android:hint="@string/enter_card_holder"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/card_expiration_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/card_expiration_date"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:fontFamily="@font/open_sans_semibold"
            android:gravity="center_vertical"
            android:text="@string/card_expiration_date"
            android:textAlignment="viewStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <LinearLayout
            android:id="@+id/card_expiration_input"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/input_card_expiration_month"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/enter_card_expiration_month"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="2" />

            <TextView
                android:id="@+id/card_expiration_slash"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:text="@string/forward_slash" />

            <EditText
                android:id="@+id/input_card_expiration_year"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/enter_card_expiration_year"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="2" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/cvv_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cvv"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:fontFamily="@font/open_sans_semibold"
            android:text="@string/cvv"
            android:textAlignment="viewStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <EditText
            android:id="@+id/input_cvv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:ems="10"
            android:fontFamily="@font/open_sans"
            android:hint="@string/cvv"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="3"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    </LinearLayout>

    <Button
        android:id="@+id/submit_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="25dp"
        android:layout_weight="1"
        android:text="@string/finish_registration" />

</LinearLayout>