<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="25dp"
    android:layout_marginRight="25dp"
    android:orientation="vertical"
    tools:context=".activities.RegisterActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:srcCompat="@mipmap/logo_launcher" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_bold"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/acme_text"
        android:textColor="@color/darkRed"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/open_sans_bold"
        android:gravity="center_horizontal"
        android:text="@string/login"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/darkGrey"
        android:textSize="35sp" />

    <LinearLayout
        android:id="@+id/username_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/username"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:fontFamily="@font/open_sans_semibold"
            android:text="@string/username"
            android:textAlignment="viewStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <EditText
            android:id="@+id/input_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:backgroundTint="@color/darkGrey"
            android:ems="10"
            android:fontFamily="@font/open_sans"
            android:hint="@string/enter_username"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColorHighlight="@color/darkRed" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/password_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/password"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:fontFamily="@font/open_sans_semibold"
            android:text="@string/password"
            android:textAlignment="viewStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <EditText
            android:id="@+id/input_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:backgroundTint="@color/darkGrey"
            android:ems="10"
            android:fontFamily="@font/open_sans"
            android:hint="@string/enter_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColorHighlight="@color/darkRed" />

    </LinearLayout>

    <TextView
        android:id="@+id/dont_have_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/dont_have_account"
        android:textAlignment="center"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/error_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:textColor="#A20000"
        android:visibility="gone" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:layout_weight="1"
        android:text="@string/login" />

</LinearLayout>