<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="25dp"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".activities.TransactionConfirmationActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/confirm_your_purchase"
        android:textAlignment="center"
        android:textSize="30sp" />

    <LinearLayout
        android:id="@+id/coupon_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/coupon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/open_sans_semibold"
            android:text="@string/coupon"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/coupon_dropdown"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:spinnerMode="dropdown" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/discount_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/discount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:checked="false"
            android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
            android:fontFamily="@font/open_sans"
            android:text="@string/discount"
            android:textSize="18sp" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/product_list"
        android:layout_width="match_parent"
        android:layout_height="280dp" />

    <LinearLayout
        android:id="@+id/buttons_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:tint="#D50000"
            app:srcCompat="@drawable/ic_cancel_black_24dp" />

        <ImageView
            android:id="@+id/confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:tint="#00C853"
            app:srcCompat="@drawable/ic_check_circle_black_24dp" />
    </LinearLayout>

</LinearLayout>