<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context=".activities.MainMenuActivity">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:orientation="vertical">

            <TextView
                android:id="@+id/customer_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_semibold"
                android:text="@string/customer_name"
                android:textSize="30sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/your_cart"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:fontFamily="@font/open_sans_bold"
                    android:text="@string/your_shopping_cart"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/shopping_cart_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/open_sans_bold"
                    android:text="@string/shopping_value"
                    android:textSize="18sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" />

    </LinearLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:background="@drawable/ripple_oval"
            android:backgroundTint="#FFD600"
            android:clickable="true"
            android:focusable="true"
            app:backgroundTint="#00FFFFFF"
            app:fabCustomSize="75dp"
            app:fabSize="normal"
            app:rippleColor="#FFFFFF"
            app:srcCompat="@android:drawable/ic_menu_add" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/product_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </androidx.recyclerview.widget.RecyclerView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</LinearLayout>